--- a/pyproject.toml
+++ b/pyproject.toml
@@ -19,6 +19,7 @@ pydantic-i18n = "^0.4.5"
 fastapi-babel = "^0.0.9"
 fastapi-pagination = "^0.12.31"
 colorama = "^0.4.6"
+python-slugify = "^8.0.4"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.4"
