--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,6 +21,7 @@ fastapi-pagination = "^0.12.31"
 colorama = "^0.4.6"
 python-slugify = "^8.0.4"
 pillow = "^11.0.0"
+aiofiles = "^24.1.0"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.4"
