--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,8 @@ colorama = "^0.4.6"
 python-slugify = "^8.0.4"
 pillow = "^11.0.0"
 aiofiles = "^24.1.0"
+redis = {extras = ["asyncio"], version = "^5.2.1"}
+aioredis = "^2.0.1"
 
 [tool.poetry.group.dev.dependencies]
 ruff = "^0.5.4"
